# pacm

./: .editorconfig  .eslintignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md  clippy.toml  deno.json  deny.toml  eslint.config.js  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  run-benchmarks.ps1  run-benchmarks.sh  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
apps/benchmark/: Cargo.toml  README.md
apps/benchmark/benches/: cache_benchmarks.rs  download_benchmarks.rs  install_benchmarks.rs  resolution_benchmarks.rs  system_benchmarks.rs
apps/benchmark/src/: benchmarks.rs  main.rs  performance_monitor.rs  utils.rs
apps/pacm/: Cargo.toml
apps/pacm/src/: main.rs
commands/: clean.js  help.js  index.js  info.js  init.js  list.js  publish.js  remove.js  run.js  search.js  self_update.js  update.js  version.js
commands/init/: fetchAllDependencies.js
commands/install/: createLockFile.js  fetchAllDependencies.js  fetchPackageMetadata.js  index.js  index.test.js  installPackage.js  runPostInstallScript.js
commands/remove/: fetchAllDependencies.js
commands/update/: fetchAllDependencies.js
core/: pacm.js
core/commands/: help.js  index.js  version.js
core/functions/commands/: help.js  index.js  version.js
crates/pacm-cli/: Cargo.toml
crates/pacm-cli/src/: commands.rs  lib.rs
crates/pacm-cli/src/handlers/: clean.rs  help.rs  init.rs  install.rs  list.rs  mod.rs  remove.rs  run.rs  start.rs  update.rs
crates/pacm-constants/: Cargo.toml
crates/pacm-constants/src/: lib.rs
crates/pacm-core/: Cargo.toml
crates/pacm-core/src/: clean.rs  download.rs  error.rs  init.rs  install.rs  lib.rs  linker.rs  list.rs  remove.rs  update.rs
crates/pacm-core/src/download/: cache.rs  client.rs  manager.rs  mod.rs  storage.rs
crates/pacm-core/src/install/: bulk.rs  cache.rs  fast_path.rs  hyper_cache.rs  manager.rs  mod.rs  optimizer.rs  resolver.rs  single.rs  smart_analyzer.rs  types.rs  utils.rs
crates/pacm-core/src/linker/: cache.rs  lockfile.rs  manager.rs  mod.rs  project.rs  store.rs
crates/pacm-error/: Cargo.toml
crates/pacm-error/src/: lib.rs
crates/pacm-lock/: Cargo.toml
crates/pacm-lock/src/: lib.rs
crates/pacm-logger/: Cargo.toml
crates/pacm-logger/src/: lib.rs
crates/pacm-project/: Cargo.toml
crates/pacm-project/src/: dependency_manager.rs  io.rs  lib.rs  package_json.rs
crates/pacm-registry/: Cargo.toml
crates/pacm-registry/src/: lib.rs
crates/pacm-resolver/: Cargo.toml
crates/pacm-resolver/src/: comparators.rs  lib.rs  platform.rs  resolver.rs  semver.rs  version_utils.rs
crates/pacm-runtime/: Cargo.toml
crates/pacm-runtime/src/: lib.rs
crates/pacm-store/: Cargo.toml
crates/pacm-store/src/: lib.rs  package_linker.rs  path_resolver.rs  store_manager.rs
crates/pacm-symcap/: Cargo.toml
crates/pacm-symcap/src/: lib.rs
crates/pacm-utils/: Cargo.toml
crates/pacm-utils/src/: lib.rs  package_spec.rs  path_utils.rs  version_utils.rs
documents/: OPTIONAL_DEPENDENCIES_IMPLEMENTATION.md  PERFORMANCE_IMPROVEMENTS.md  REFACTORING_SUMMARY.md
example/: index.js  package.json
example/bun/: bun.lockb  package.json
example/npm/: package-lock.json
example/pacm/: index.js  package.json  package.old.json  pacm.lockp
example/pnpm/: index.js  package.json
example/yarn/: index.js
functions/: link.js  unlink.js
guides/: BENCHMARK_GUIDE.md
handlers/: update.js
lib/: logger.js
scripts/: compile.js  install.ps1  install.sh  update-icon.js
src/: index.js
src/commands/: clean.js  help.js  index.js  index.test.js  init.js  install.js  list.js  remove.js  run.js  update.js  version.js
src/commands/install/: index.js  index.test.js  installPackage.js
src/functions/: link.js  unlink.js
src/utils/: checkScriptExists.js  closestScriptMatch.js  createLockFile.js  createLockFile.test.js  downloadAndExtractTarball.js  fetchPackageMetadata.js  retry.js  runPostInstallScript.js
testing/bun/: bun.lockb  package.json
testing/npm/: package-lock.json  package.json
testing/pacm/: index.js  package.json  pacm.lockp
testing/pnpm/: pnpm-lock.yaml
utils/: checkScriptExists.js  closestScriptMatch.js  createLockFile.js  createLockFile.test.js  downloadAndExtractTarball.js  fetchNpmConfig.js  fetchPackageMetadata.js  retry.js  runPostInstallScript.js
