[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.lints.clippy]
# Enable lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow specific lints that might be too noisy
similar_names = "allow"
module_inception = "allow"
missing_errors_doc = "allow"  # TODO: remove when documentation is complete
missing_panics_doc = "allow"  # TODO: remove when documentation is complete
struct_excessive_bools = "allow"  # TODO: review specific cases
multiple_crate_versions = "allow"  # Allow during development

# Deny specific lints for better code quality
mem_forget = "deny"
indexing_slicing = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
clone_on_ref_ptr = "deny"
large_stack_arrays = "deny"
rc_mutex = "deny"