[package]
name = "pacm-benchmark"
version = "0.1.0"
edition = "2021"
description = "Performance benchmarking suite for PACM package manager"

[[bin]]
name = "pacm-benchmark"
path = "src/main.rs"

[dependencies]
# Core PACM dependencies
pacm-core = { path = "../../crates/pacm-core" }
pacm-project = { path = "../../crates/pacm-project" }
pacm-resolver = { path = "../../crates/pacm-resolver" }
pacm-registry = { path = "../../crates/pacm-registry" }
pacm-store = { path = "../../crates/pacm-store" }
pacm-logger = { path = "../../crates/pacm-logger" }
pacm-error = { path = "../../crates/pacm-error" }

# Benchmarking and performance
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }

# System monitoring
sysinfo = "0.30"
futures = "0.3"

# Statistical analysis
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "install_benchmarks"
harness = false

[[bench]]
name = "resolution_benchmarks"
harness = false

[[bench]]
name = "cache_benchmarks"
harness = false

[[bench]]
name = "download_benchmarks"
harness = false

[[bench]]
name = "system_benchmarks"
harness = false
