[package]
name = "pacm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
owo-colors = "4.0"
inquire = "0.7"
tokio = { version = "1.0", features = ["full"] }
pacm-core = { path = "../pacm-core" }
pacm-runtime = { path = "../pacm-runtime" }
pacm-logger = { path = "../pacm-logger" }
pacm-utils = { path = "../pacm-utils" }
pacm-project = { path = "../pacm-project" }