[package]
name = "pacm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
pacm-store = { path = "../pacm-store" }
pacm-resolver = { path = "../pacm-resolver" }
pacm-lock = { path = "../pacm-lock" }
pacm-project = { path = "../pacm-project" }
pacm-logger = { path = "../pacm-logger" }