[package]
name = "pacm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
urlencoding = "2.1"
rayon = "1.10"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
owo-colors = "4.0"
pacm-store = { path = "../pacm-store" }
pacm-resolver = { path = "../pacm-resolver" }
pacm-registry = { path = "../pacm-registry" }
pacm-lock = { path = "../pacm-lock" }
pacm-project = { path = "../pacm-project" }
pacm-logger = { path = "../pacm-logger" }
pacm-error = { path = "../pacm-error" }
pacm-constants = { path = "../pacm-constants" }